--- a/book-service/book-service-dev.properties
+++ b/book-service/book-service-dev.properties
@@ -1,5 +1,5 @@
 server.port=8081
-spring.application.name=book-service
+spring.application.name=book-info-service
 spring.jpa.hibernate.ddl-auto=none
 logging.level.org.springframework.jdbc.datasource.init.ScriptUtils=debug
 
