--- a/book-service/book-service-qa.properties
+++ b/book-service/book-service-qa.properties
@@ -10,3 +10,9 @@ spring.datasource.username=postgres
 spring.datasource.password=password
 spring.jpa.show-sql=true
 spring.jpa.generate-ddl=true
+
+aws.access.key.id=AKIAVGTCU6PUSFUXMWCX
+aws.access.key.secret=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	
+aws.region=us-east-1
+aws.s3.audio.bucket=mc-uc-training
+
